err/datagrid.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/DataGrid-0.3.5.egg-info'...
Listing './lib/python3.5/site-packages/datagrid'...
Compiling './lib/python3.5/site-packages/datagrid/calctools.py'...
***   File "./lib/python3.5/site-packages/datagrid/calctools.py", line 107
    exec 'calc_method = lambda d: ' + calc_string  # pylint: disable-msg=W0122
                                  ^
SyntaxError: Missing parentheses in call to 'exec'

Listing './lib/python3.5/site-packages/datagrid/renderer'...
Listing './lib/python3.5/site-packages/datagrid/server'...
Compiling './lib/python3.5/site-packages/datagrid/server/core.py'...
***   File "./lib/python3.5/site-packages/datagrid/server/core.py", line 42
    print "serving at http://localhost:", self.port
                                       ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './lib/python3.5/site-packages/tests/mocks'...
Listing './share'...
Listing './share/python-wheels'...
